Edited wiki page Navigation through web user interface.

--- a/wiki/Navigation.wiki
+++ b/wiki/Navigation.wiki
@@ -1,3 +1,8 @@
 #summary One-sentence summary of this page.
 
- * [[FlashFlowFactory]]
+ * FlashFlowFactory
+ * ImageSaver
+ * CropUtilClass
+ * ImageClass
+ * Chain
+ * ColorClass
