Edited wiki page Framework through web user interface.

--- a/wiki/Framework.wiki
+++ b/wiki/Framework.wiki
@@ -1,4 +1,5 @@
 #summary Description of framework
+#labels Deprecated
 
 _This page is removed since the framework has an official name: FlashFlowFactory_
 
