Edited wiki page Navigation through web user interface.

--- a/wiki/Navigation.wiki
+++ b/wiki/Navigation.wiki
@@ -1,8 +1,13 @@
 #summary One-sentence summary of this page.
 
- * FlashFlowFactory
- * ImageSaver
- * CropUtilClass
- * ImageClass
- * Chain
- * ColorClass
+*Framework*
+ * [http://code.google.com/p/stroep/wiki/FlashFlowFactory FlashFlowFactory]
+
+*Tweening*
+ * [http://code.google.com/p/stroep/wiki/Chain Chain]
+
+*Utils*
+ * [http://code.google.com/p/stroep/wiki/ImageSaver ImageSaver]
+ * [http://code.google.com/p/stroep/wiki/CropUtilClass Crop util]
+ * [http://code.google.com/p/stroep/wiki/ImageClass Image]
+ * [http://code.google.com/p/stroep/wiki/ColorClass Color]
