--- a/wiki/Navigation.wiki
+++ b/wiki/Navigation.wiki
@@ -1,13 +1,13 @@
 #summary One-sentence summary of this page.
 
-*Framework*
- * [http://code.google.com/p/stroep/wiki/FlashFlowFactory FlashFlowFactory]
+ * *Framework*
+  * [http://code.google.com/p/stroep/wiki/FlashFlowFactory FlashFlowFactory]
 
-*Tweening*
- * [http://code.google.com/p/stroep/wiki/Chain Chain]
+ * *Tweening*
+  * [http://code.google.com/p/stroep/wiki/Chain Chain]
 
-*Utils*
- * [http://code.google.com/p/stroep/wiki/ImageSaver ImageSaver]
- * [http://code.google.com/p/stroep/wiki/CropUtilClass Crop util]
- * [http://code.google.com/p/stroep/wiki/ImageClass Image]
- * [http://code.google.com/p/stroep/wiki/ColorClass Color]
+ * *Utils*
+  * [http://code.google.com/p/stroep/wiki/ImageSaver ImageSaver]
+  * [http://code.google.com/p/stroep/wiki/CropUtilClass Crop util]
+  * [http://code.google.com/p/stroep/wiki/ImageClass Image]
+  * [http://code.google.com/p/stroep/wiki/ColorClass Color]
