--- a/wiki/ImageSaver.wiki
+++ b/wiki/ImageSaver.wiki
@@ -34,8 +34,14 @@ private function onSaveComplete( e:Event ):void {
 }
 }}}
 
+* upload to server *
 The save / upload function works like this:
+
 `public function save( bitmapDrawable:IBitmapDrawable, filename:String, backgroundColor:Number = 0x00FFFFFF, JPGquality:int = 85, rect:Rectangle = null ):void`
 
+
+* saving local *
+
 The local save function works like this:
+
 `public function saveLocal( bitmapDrawable:IBitmapDrawable, filename:String, backgroundColor:Number = 0x00FFFFFF, JPGquality:int = 85, rect:Rectangle = null ):void`
